<resources>
    <string name="app_name">Digitoon Task</string>
    <string name="choose_movie_title">Please choose your movie</string>
    <string name="genre">Genre:</string>
    <string name="director">Director:</string>
    <string name="writer">Write:</string>
    <string name="actors">Actors:</string>
    <string name="plot">Plot:</string>
    <string name="language">Language:</string>
    <string name="country">Country:</string>
    <string name="awards">Award:</string>
    <string name="imdb">ImdbRating:</string>
    <string name="type">Type:</string>
    <string name="year">Year:</string>

</resources>